--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.14.4",
     "babel-cli": "^6.26.0",
     "babel-preset-react": "^6.24.1",
-    "mongodb": "^3.6.9"
+    "mongodb": "^3.6.9",
+    "nodemon": "^2.0.7"
   }
 }
