--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "compile": "babel  static/src --presets react --out-dir static",
     "watch": "babel static/src --presets react --out-dir static --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "Solomon Asiedu",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.9"
   },
