--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Solomon Asiedu",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.9",
